修改 按钮 与 删除 无用文件

--- a/index.html
+++ b/index.html
@@ -10,34 +10,11 @@
 		<link rel="stylesheet" href="assets/css/style.css" />
 
 		<script src="assets/js/libs/prefixfree.min.js"></script>
-
-		<script src="assets/js/libs/modernizr-2.7.1.dev.js"></script>
-
+		<script src="assets/js/libs/modernizr-2.6.2.min.js"></script>
 		<script src="assets/js/libs/jquery-1.11.0.min.js"></script>
 		<script src="assets/js/libs/jquery.easing.1.3.js"></script>
-
-
         <script src="assets/js/TweenMax.min.js"></script>
-        <script src="assets/js/Modernizr.js"></script>
-
-        <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-49697361-1']);
-  _gaq.push(['_setDomainName', (function(){var a = location.host.split(".");a.shift();return a.join(".");})()]);
-  _gaq.push(['_setAllowLinker', true]);
-  _gaq.push(['_setAllowHash', false]);
-  _gaq.push(['_trackPageview']);
-
- (function(){
-    var ga = document.createElement('script');
-    ga.type = 'text/javascript';
-    ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; 
-    s.parentNode.insertBefore(ga, s);
-})();
-</script>
-<script src="assets/js/total.js"></script>
+		<script src="assets/js/total.js"></script>
 </head>
 
 <body>
@@ -86,11 +63,6 @@ function handleComplete() {
 </script>
 <!--<![endif]-->
 </head>
-
-
-
-
-
 		 <div class="wrapper"><!-- not needed? up to you: http://camendesign.com/code/developpeurs_sans_frontieres -->
 			 <div class="top_nav">
 				 <a class="top_link_1" target="_blank" href="https://creditcard.pingan.com.cn/financing/public/newApplyCard.do?scc=OTAwMDAwMDA4&ccp=3&paSignature=1EAEE383AD2A7D075DFE7F3DC64CE4B446365D9A1B4A3D02391E7EB5B273DEDE4EB1BB0C42EC84D9170ACA7DA04B7F2873434594430D397A6AED7DA26D58DA3337C9A5E3A042FDABFA5C5E4E7BF10CB4B833A9A936A3B904E3A359A11859ED6D62644393354DC0D0F8A95606587AEFF6E891340E8A627C635F23996AD048CB65"></a>
@@ -101,7 +73,12 @@ function handleComplete() {
 				 <a class="top_link_3" target="_blank" href="http://creditcard.pingan.com/youhuihuodong/houyou.shtml?WT.mc_id=shipin"></a>
 			 </div>
 			 <div class="title"></div>
-
+			 
+			 <div class="morebtn">
+					<a class="more_link" href="http://pinganjiayouyouhui.wangfan.com/shanghaievent/" target="_blank">
+					</a>
+			</div>
+			
 			 <div id="line" class="line_box" style="display:none;">
 				 <div class="line line_1"></div>
 				 <div class="icon icon_1">
@@ -147,6 +124,7 @@ function handleComplete() {
 						 <img src="./assets/images/icon_buttom.png" alt="">
 					 </div>
 				 </div>
+				
 			 </div>
 			 <div class="map">
 				 <img src="images/d.jpg" class="map-di" />
@@ -187,3 +165,20 @@ function handleComplete() {
 		 </html>
 
 		 <script src="assets/js/functions.js"></script>
+        <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-49697361-1']);
+  _gaq.push(['_setDomainName', (function(){var a = location.host.split(".");a.shift();return a.join(".");})()]);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_setAllowHash', false]);
+  _gaq.push(['_trackPageview']);
+
+ (function(){
+    var ga = document.createElement('script');
+    ga.type = 'text/javascript';
+    ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; 
+    s.parentNode.insertBefore(ga, s);
+})();
+</script>
